Tim's edit #5 from list (1987 combines Arnold move + Annie S. text & pics)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -361,19 +361,9 @@
             data-onbegin="DSL.config.setTimelineTo(1100); DSL.config.showMapPointsTo('1987');">
             <div class="timeline-label" data-begin="2s" style="top: 1450px; left: 4000px">19,745 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1987</span></div>
-            <div class="r1 c3 h1 w1"><p class="event-blurb">Herbarium moved to Arnold Lab basement</p></div>
-            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/ArnoldLabBasement.jpg);background-size:cover;"></div>
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
-          </div>
-
-         <!-- 19something -->
-
-          <div id="y19--" title="&#8594; 19--" data-timecontainer="par"
-            data-onbegin="DSL.config.setTimelineTo(800); DSL.config.showMapPointsTo('1990');">
-            <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">19--</span></div>
-            <div class="r1 c3 h1 w1"><p class="event-blurb">Annie Schmitt became herbarium curator</p></div>
+            <div class="r1 c3 h1 w1"><p class="event-blurb">Herbarium moved to Arnold Lab basement. Annie Schmitt saves the herbarium!</p></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/AnnieSchmitt.jpg);background-size:cover;"></div>
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/ArnoldLabBasement.jpg);background-size:cover;"></div>
           </div>
 
          <!-- 2008 -->
