add brown.edu/go/herb URL to PR intro screen and to digitization process screens (Tim's edit #7)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -104,9 +104,14 @@
     <div id="library-intro" data-timecontainer="par" title="Opening remarks from Patrick">
 
       <div data-timecontainer="par" data-role="wall" 
-        class="c2 r2 w2 h1 textpanel" style="background-color: #dd0033">
-        [ PR intro ]
-      </div>      
+        class="c2 r2 w2 h1" style="background-color: #dd0033; opacity: .75;">
+      </div>
+
+      <div data-timecontainer="par" data-role="wall" 
+        class="c2 r2 w2 h1 textpanel">
+        <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p>
+      </div>
+
       <div data-timecontainer="par" data-role="audience" 
         class="fullscreen-textpanel-1 fullheight"
         data-onbegin="$('body').css('background-color', 'black');">
@@ -437,7 +442,14 @@
           class="r1 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030417-adjusted.jpg')"></div>
         <div data-timecontainer="par" data-role="wall" data-begin="5s"
           class="r3 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030420-adjusted.jpg')"></div>
-        
+
+        <div data-timecontainer="par" data-role="wall" data-begin="7s" 
+          class="c2 r2 w2 h1">
+          <p style="background-color: #dd0033; opacity: .75;font-size:10em;"><br /><br /><br /><br /></p></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="8s"
+          class="c2 r2 w2 h1 textpanel">
+          <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p></div>
+
         <div data-timecontainer="seq" data-role="wall">
           <!-- Empty element, then ...  -->
           <div data-timecontainer="par" data-role="wall"></div>
@@ -450,6 +462,7 @@
               class="r3 c2 w1 h1 image-cover" style="background-image: url('images/digitization/Card-blowup-2.jpg')"></div>
           </div>
         </div>
+
       </div>
       
       <div data-timecontainer="par" data-role="audience" 
