Tim's edit #1 from list (add specimen photos to intro. screens)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -104,12 +104,22 @@
     <div id="library-intro" data-timecontainer="par" title="Opening remarks from Patrick">
 
       <div data-timecontainer="par" data-role="wall" 
-        class="c2 r2 w2 h1" style="background-color: #dd0033; opacity: .75;">
+        class="c2 r2 w2 h1" style="background-color: #dd0033; opacity: .75;z-index:10;">
       </div>
 
       <div data-timecontainer="par" data-role="wall" 
-        class="c2 r2 w2 h1 textpanel">
+        class="c2 r2 w2 h1 textpanel" style="z-index:20;">
         <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p>
+      </div>
+
+      <div data-timecontainer="par"  data-role="wall"
+        class="image-cover c1 r1 w2 h3" 
+           style="background-image: url('images/more-specimens/PBRU00008214-intro1.jpg')">
+      </div>
+
+      <div data-timecontainer="par"  data-role="wall" 
+        class="image-cover c3 r1 w2 h3" 
+           style="background-image: url('images/more-specimens/PBRU00014737-intro2.jpg')">
       </div>
 
       <div data-timecontainer="par" data-role="audience" 
