Tim's edit #3: add specimen to 2nd Bailey timeline screen

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -276,7 +276,7 @@
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1880</span></div>
             <div class="r1 c3 h1 w1"><p class="event-blurb">William Bailey becomes first Professor of Botany at Brown</p></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/WilliamWhitmanBailey3.jpg);background-size:cover;"></div>
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00005354-Bailey2.jpg);background-size:cover;"></div>
           </div>
 
           <!-- 1881 -->
