Added pictures of cards to activity slide (for people who don't have phones)

--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -490,7 +490,13 @@
       <!-- Wall view -->
 
       <div data-timecontainer="par" data-role="wall" style="background-color: black" class="r1 c1 w4 h3 countdown">
-        <div class="c1 r1 w4 h3" data-begin="0s" data-end="10s" style=""><span>60</span></div>
+        
+        <div class="c3 r1 w1 h1 image" data-begin="0s" data-end="60s" style="background-image: url('images/activity-labels/Label-1_bdr405865.png')"></div>
+        <div class="c4 r1 w1 h1 image" data-begin="0s" data-end="60s" style="background-image: url('images/activity-labels/Label-3_bdr390461.png')"></div>
+        <div class="c4 r2 w1 h1 image" data-begin="0s" data-end="60s" style="background-image: url('images/activity-labels/Label-2_bdr390790.png')"></div>
+        <div class="c4 r3 w1 h1 image" data-begin="0s" data-end="60s" style="background-image: url('images/activity-labels/Label-4_bdr391598.png')"></div>
+        
+        <div class="c1 r1 w4 h3" data-begin="0s"  data-end="10s"><span>60</span></div>
         <div class="c1 r1 w1 h1" data-begin="10s" data-end="20s"><span>50 seconds</span></div>
         <div class="c1 r1 w1 h1" data-begin="20s" data-end="30s"><span>40 seconds</span></div>
         <div class="c1 r1 w1 h1" data-begin="30s" data-end="40s"><span>30 seconds</span></div>
