--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -307,7 +307,7 @@
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1890</span></div>
             <div class="r1 c3 h1 w1"><p class="event-blurb">James Lawrence Bennett, local jeweler and amateur botanist, became curator of the Brown Herbarium</p></div>
             <!-- <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00004630-Bennett.jpg);background-size:cover;"></div>
           </div>
 
           <!-- 1894 -->
