--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -371,7 +371,7 @@
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">1938</span></div>
             <div class="r1 c3 h1 w1"><p class="event-blurb">George Church became herbarium curator</p></div>
             <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/GeorgeLyleChurch007.jpg);background-size:cover;"></div>
-            <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
+            <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/PBRU00013149-Church.jpg);background-size:cover;"></div>
           </div>
 
          <!-- 1987 -->
