Removed out step that doesn't exist any longer

--- a/sites/commencement/control.html
+++ b/sites/commencement/control.html
@@ -65,7 +65,7 @@
       <a id="y1938" class="list-group-item">→ 1938:1</a>
       <a id="y1938-2" class="list-group-item">→ 1938:2</a>
       <a id="y1987" class="list-group-item">→ 1987</a>
-      <a id="y19--" class="list-group-item">→ 19--</a>
+      <!--<a id="y19-\-" class="list-group-item">→ 19-\-</a>-->
       <a id="y2008" class="list-group-item">→
         2008</a>
       <a id="y2013" class="list-group-item">→ 2013</a>
