--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -109,7 +109,7 @@
         class="c2 r2 w2 h1 textpanel" style="z-index:20;">
         <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p>
       </div>
-
+      <!--
       <div data-timecontainer="par"  data-role="wall"
         class="image-cover c1 r1 w2 h3" 
            style="background-image: url('images/more-specimens/PBRU00008214-intro1.jpg')">
@@ -118,13 +118,7 @@
       <div data-timecontainer="par"  data-role="wall" 
         class="image-cover c3 r1 w2 h3" 
            style="background-image: url('images/more-specimens/PBRU00014737-intro2.jpg')">
-      </div>
-
-      <div data-timecontainer="par" data-role="audience" 
-        class="fullheight"
-        data-onbegin="$('body').css('background-color', 'black');">
-        <h1>The Library &mdash; Extending into the Digital</h1>
-      </div>
+      </div>-->
     </div>
 
     <!-- What is an Herbarium? -->
@@ -451,12 +445,6 @@
         <div data-timecontainer="par" data-role="wall" data-begin="5s"
           class="r3 c4 w1 h1 image-cover" style="background-image: url('images/digitization/P1030420-adjusted.jpg')"></div>
 
-        <div data-timecontainer="par" data-role="wall" data-begin="7s" 
-          class="c2 r2 w2 h1">
-          <p style="background-color: #dd0033; opacity: .75;font-size:10em;"><br /><br /><br /><br /></p></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="8s"
-          class="c2 r2 w2 h1 textpanel">
-          <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p></div>
 
         <div data-timecontainer="seq" data-role="wall">
           <!-- Empty element, then ...  -->
@@ -468,10 +456,12 @@
               class="r1 c3 w1 h1 image-cover" style="background-image: url('images/digitization/Card-blowup-1.jpg')"></div>
             <div data-timecontainer="par" data-role="wall" data-begin="2s"
               class="r3 c2 w1 h1 image-cover" style="background-image: url('images/digitization/Card-blowup-2.jpg')"></div>
-            <div data-timecontainer="par" data-role="wall" data-begin="4s"
-              class="r3 c2 w1 h1" style="background-color: black">
-              http://brown.edu/go/herb
-            </div>
+            <div data-timecontainer="par" data-role="wall" data-begin="4s" 
+              class="c2 r2 w2 h1">
+              <p style="background-color: #dd0033; opacity: .75;font-size:10em;"><br /><br /><br /><br /></p></div>
+            <div data-timecontainer="par" data-role="wall" data-begin="5s"
+              class="c2 r2 w2 h1 textpanel">
+              <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p></div>
           </div>
         </div>
 
