Created new site for LAC presentation

--- a/index-hidden.html
+++ b/index-hidden.html
@@ -41,8 +41,22 @@
       <a class="list-group-item" href="sites/commencement/control.html">Presenter controller</a>
     </div>
   </div>
-  
-<!--
+
+  <div class="panel panel-default">
+    <div class="panel-heading">LAC</div>
+    <div class="panel-body">
+      <p>
+        <em>Herbarium presentation for LAC, October 2015</em>
+      </p>
+    </div>
+    <div class="list-group">
+      <a class="list-group-item" href="sites/herbarium-lac/index.html?role=wall">Wall view</a>
+      <!--<a class="list-group-item" href="sites/commencement/index.html?role=audience">Audience view</a>-->
+      <a class="list-group-item" href="sites/herbarium-lac/control.html">Presenter controller</a>
+    </div>
+  </div>
+
+  <!--
   <div class="panel panel-default">
     <div class="panel-heading">Main Demo</div>
     <div class="panel-body">
@@ -86,7 +100,7 @@
     </div>
   </div>
   -->
-  
+
 </body>
 
 </html>
