Added demo to index

--- a/index-hidden.html
+++ b/index-hidden.html
@@ -27,7 +27,20 @@
   <h1>DieSeL: A platform for a scholarly environment</h1>
 
 
-
+  <div class="panel panel-default">
+    <div class="panel-heading">DieSeL demo</div>
+    <div class="panel-body">
+      <p>
+        <em>Basic demo of DieSeL in action</em>
+      </p>
+    </div>
+    <div class="list-group">
+      <a class="list-group-item" href="sites/demo/index.html?role=wall">Wall view</a>
+      <a class="list-group-item" href="sites/demo/index.html?role=secondary">Audience view (best on mobile)</a>
+      <a class="list-group-item" href="sites/demo/control.html">Presenter controller</a>
+    </div>
+  </div>
+  
   <div class="panel panel-default">
     <div class="panel-heading">Commencement</div>
     <div class="panel-body">
