Added Olney slide

--- a/sites/herbarium-lac/index.html
+++ b/sites/herbarium-lac/index.html
@@ -142,6 +142,26 @@
       </div>
     </div>
 
+    <!-- Olney -->
+    
+    <div id="what-is" data-timecontainer="par" 
+         class="r1 c1 w4 h3"
+         title="Stephen Olney"
+         style="background-color: black">
+      <div data-role="wall" class="image-contain c1 r1 w1 h3"
+           data-begin="0.5s"
+           style="background-image:url('images/olney/specimen-1.jpg')"></div>
+      <div data-role="wall" class="image c2 r1 w1 h3"
+           data-begin="1s"
+           style="background-image:url('images/olney/specimen-2.jpg')"></div>
+      <div data-role="wall" class="image c3 r1 w1 h3"
+           data-begin="1.5s"
+           style="background-image:url('images/olney/specimen-3.jpg')"></div>
+      <div data-role="wall" class="image c4 r1 w1 h3"
+           data-begin="2s"
+           style="background-image:url('images/olney/specimen-4.jpg')"></div>
+    </div>
+    
     <!-- World map -->
 
     <div id="world" data-timecontainer="par" title="World coverage map">
@@ -182,9 +202,6 @@
                 <br />
                 <br />
               </p>
-            </div>
-            <div data-timecontainer="par" data-role="wall" data-begin="5s" class="c2 r2 w2 h1 textpanel">
-              <p style="font-size:80%;text-shadow: 10px 10px #4f3528;">http://brown.edu/go/herb</p>
             </div>
           </div>
         </div>
@@ -325,17 +342,17 @@
           <span>Future <br /> Research</span>
         </div>
 
-        <div data-timecontainer="par" data-role="wall" data-begin="1s" class="r1 c1 w1 h1 image" style="background-image: url('images/future-research/IMG_0613.JPG'); background-size:cover;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="4s" class="r1 c2 w2 h3 image" style="background-image: url('images/future-research/Rubertone1895MP-adjusted.jpg');background-size:cover;opacity:.5;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="3s" class="r2 c1 w1 h2 image-cover" style="background-image: url('images/future-research/6J2C9861.jpg');"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="0.5s" class="r1 c1 w1 h1 image-cover" style="background-image: url('images/future-research/PNG_Collection2.JPG'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="1s" class="r3 c1 w1 h1 image" style="background-image: url('images/future-research/WanangPNG.JPG'); background-size:cover;"></div><!--
+        <div data-timecontainer="par" data-role="wall" data-begin="4s" class="r1 c2 w2 h3 image" style="background-image: url('images/future-research/Rubertone1895MP-adjusted.jpg');background-size:cover;opacity:.5;"></div>-->
+        <div data-timecontainer="par" data-role="wall" data-begin="1.5s" class="r2 c1 w1 h1 image-cover" style="background-image: url('images/future-research/PapuaNewGuinea.JPG');"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="2s" class="r2 c3 w1 h1 image-cover" style="background-image: url('images/future-research/IMG_3384.JPG'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="2.5s" class="r1 c3 w1 h1 image-cover" style="background-image: url('images/future-research/IMG_9442.jpg'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="3s" class="r3 c3 w1 h1 image-cover" style="background-image: url('images/future-research/IMGP0017.JPG'); background-size:cover;"></div>
 
-        <div data-timecontainer="par" data-role="wall" data-begin="2s" class="r2 c4 w1 h1 image-cover" style="background-image: url('images/future-research/IMG_3384.JPG'); background-size:cover;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="6s" class="r1 c4 w1 h1 image-cover" style="background-image: url('images/future-research/IMG_9442.jpg'); background-size:cover;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="5s" class="r3 c4 w1 h1 image-cover" style="background-image: url('images/future-research/IMGP0017.JPG'); background-size:cover;"></div>
-
-        <div data-timecontainer="par" data-role="wall" data-begin="7s" class="r2 c3 w1 h2 image-cover" style="background-image: url('images/future-research/IMG_9675_2.jpg'); background-size:cover;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="9s" class="r2 c2 w1 h2 image-cover" style="background-image: url('images/future-research/P9250006.jpg'); background-size:cover;"></div>
-        <div data-timecontainer="par" data-role="wall" data-begin="8s" class="r1 c3 w1 h2 image-cover" style="background-image: url('images/future-research/IMG_9731_2.jpg'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="3.5s" class="r1 c4 w1 h2 image-cover" style="background-image: url('images/future-research/Viburnum_cropped.jpg'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="4s" class="r2 c2 w1 h2 image-cover" style="background-image: url('images/future-research/RhodeIslandCollection_cropped.jpg'); background-size:cover;"></div>
+        <div data-timecontainer="par" data-role="wall" data-begin="4.5s" class="r3 c4 w1 h1 image-cover" style="background-image: url('images/future-research/Climbing-a-tree.jpg'); background-size:cover;"></div>
 
       </div>
     </div>
