Changed "Commencement" to "LAC" on title slide

--- a/sites/herbarium-lac/index.html
+++ b/sites/herbarium-lac/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <div class="c4 r3 w1 h1" style="background: none;">
-          <p style="font-family:MinionRoman;font-size:10em;color:#dd0033;text-align:left;margin-top:20%;letter-spacing:.1em;margin-left:10%;">COMMENCEMENT
+          <p style="font-family:MinionRoman;font-size:10em;color:#dd0033;text-align:left;margin-top:20%;letter-spacing:.1em;margin-left:10%;">LIBRARY ADVISORY COMMITTEE MEETING
             <br /> 2015</p>
         </div>
 
