Make the background of the DSL/BDR slide white

--- a/sites/herbarium-lac/index.html
+++ b/sites/herbarium-lac/index.html
@@ -158,7 +158,8 @@
 
     <!-- The Digitization Process overview -->
     
-    <div id="bdr-dsl" data-timecontainer="par" title="The digitization process with BDR and DSL">
+    <div id="bdr-dsl" data-timecontainer="par" title="The digitization process with BDR and DSL"
+          data-onbegin="$('body').css('background-color', 'white');">
       <svg xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="7680" height="3240" id="svg2" version="1.1" inkscape:version="0.48.5 r10040" sodipodi:docname="library-process.svg">
         <defs id="defs4">
           <path sodipodi:type="arc" style="fill:url(#radialGradient4106);fill-opacity:1;stroke:none" id="path4098" sodipodi:cx="1733.4218" sodipodi:cy="2524.812" sodipodi:rx="553.5636" sodipodi:ry="553.5636" d="m 2286.9854,2524.812 a 553.5636,553.5636 0 1 1 -1107.1272,0 553.5636,553.5636 0 1 1 1107.1272,0 z" transform="matrix(1.9416059,0,0,1.9416059,-1854.4336,-4803.4115)" />
