Added "Why Digitize" slide to navigation

--- a/sites/herbarium-lac/control.html
+++ b/sites/herbarium-lac/control.html
@@ -54,6 +54,7 @@
     <a id="digitization" class="list-group-item">The digitization process</a>
     <a id="card-blowups" class="list-group-item">→ Card blow-ups</a>
     <a id="bdr-dsl" class="list-group-item">BDR / DSL</a>
+    <a id="why" class="list-group-item">Why digitize?</a>
     <a id="cat-swamp-map" class="list-group-item">Cat Swamp map sequence</a>
     <a id="cat-swamp-map-historical" class="list-group-item">→ Historical map</a>
     <a id="cat-swamp-map-satellite" class="list-group-item">→ Satellite map</a>
