Added herbarium-class site to index page (changed from index-hidden.html to index.html)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,21 @@
     <div class="list-group">
       <a class="list-group-item" href="sites/herbarium-lac/index.html?role=wall">Wall view</a>
       <!--<a class="list-group-item" href="sites/commencement/index.html?role=audience">Audience view</a>-->
-      <a class="list-group-item" href="sites/herbarium-lac/control.html">Presenter controller</a>
+      <a class="list-group-item" href="sites/herbarium-lac/control2.html">Presenter controller</a>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">Herbarium treemap</div>
+    <div class="panel-body">
+      <p>
+        <em>Navigable treemap visualization of the Herbarium collection</em>
+      </p>
+    </div>
+    <div class="list-group">
+      <a class="list-group-item" href="sites/herbarium-class/content/treemap/index.html?role=wall">Wall view</a>
+      <!--<a class="list-group-item" href="sites/commencement/index.html?role=audience">Audience view</a>-->
+      <a class="list-group-item" href="sites/herbarium-class/content/treemap/control2.html">Presenter controller</a>
     </div>
   </div>
 
